src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__line_break.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(non_content_break, \"\\n\")"
---
- token: break
  stream: "\n"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 1
      column: 0
- value: ~

