src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-10.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \"#one\\n#two\")"
---
- severity: error
  message: "expected whitespace or a line break, but found '#'"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
  stream: "#"
- remainder: "#one\n#two"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 9
      line: 1
      column: 4

