src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-13.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \" \")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- value: ~

