src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-14.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \" #one\")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: comment
  stream: "#one"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- value: ~

