src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-17.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \" foo\")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- value: ~
- remainder: foo
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4

