src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-18.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \" \\nfoo\")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: break
  stream: "\n"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 2
      line: 1
      column: 0
- value: ~
- remainder: foo
  span:
    start:
      index: 2
      line: 1
      column: 0
    end:
      index: 5
      line: 1
      column: 3

