src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-19.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \" #comment\\nfoo\")"
---
- token: separator
  stream: " "
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: comment
  stream: "#comment"
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 9
      line: 0
      column: 9
- token: break
  stream: "\n"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 1
      column: 0
- value: ~
- remainder: foo
  span:
    start:
      index: 10
      line: 1
      column: 0
    end:
      index: 13
      line: 1
      column: 3

